bk_ida/gccida/g0/xmalloc_failed
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/xmalloc_failed/src/xmalloc.c:576:22: error: use of undeclared identifier 'unk_819A41'
v1 = ( const char *)&unk_819A41; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/xmalloc_failed/src/xmalloc.c:578:22: error: use of undeclared identifier 'unk_819A40'
v1 = ( const char *)&unk_819A40; 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/xmalloc_failed/src/obj/xmalloc.o] Error 1
